# PROJET_MGSI

./: .gitignore  CMakeLists.txt  README.md  fichier_avec_courbe.cpp  main.cpp  makefile  rail.cpp
Model/header/: Arbre.h  Carre.h  Cercle.h  Cube.h  DemiPlan.h  Difference.h  Difference3D.h  Figure.h  Figure3D.h  Intersection.h  Intersection3D.h  Locomotive.h  Menger.h  MengerTroue.h  Rotation.h  RotationX3D.h  RotationY3D.h  RotationZ3D.h  Scale.h  Scale3D.h  Sphere.h  Translation.h  Translation3D.h  TriangleRecursif.h  TriangleTroue.h  Union.h  Union3D.h  Vecteur.h  WagonBac.h  WagonBetail.h  WagonCorps.h  WagonRoues.h
Model/source/: Arbre.cpp  Carre.cpp  Cercle.cpp  Cube.cpp  DemiPlan.cpp  Difference.cpp  Difference3D.cpp  Figure.cpp  Figure3D.cpp  Intersection.cpp  Intersection3D.cpp  Locomotive.cpp  Menger.cpp  MengerTroue.cpp  Rotation.cpp  RotationX3D.cpp  RotationY3D.cpp  RotationZ3D.cpp  Scale.cpp  Scale3D.cpp  Sphere.cpp  Translation.cpp  Translation3D.cpp  TriangleRecursif.cpp  TriangleTroue.cpp  Union.cpp  Union3D.cpp  WagonBac.cpp  WagonBetail.cpp  WagonCorps.cpp  WagonRoues.cpp
